--- a/src/scss/tabs.scss
+++ b/src/scss/tabs.scss
@@ -35,7 +35,7 @@
                 }
             }
 
-            &:first-child {
+            &.active{
                 background: $clr-pr;
                 a {
                     color:$clr-sc ;
@@ -45,82 +45,82 @@
         
     }
 
-    .tab-1.active {
-        position: relative;
-        background: white;
-        height: 83%;
-        box-shadow: 0 5px 5px 5px rgba($color: #000000, $alpha: .2);
-        padding: 20px;
-        box-sizing: border-box;
-        border-radius: 0 40px 0 40px;
+    // .tab-1.active {
+    //     position: relative;
+    //     background: white;
+    //     height: 83%;
+    //     box-shadow: 0 5px 5px 5px rgba($color: #000000, $alpha: .2);
+    //     padding: 20px;
+    //     box-sizing: border-box;
+    //     border-radius: 0 40px 0 40px;
 
-        select{
-            margin-right: 64px;
-            border: none !important;
-            background: none !important;
-            outline: none !important;
-        }
+    //     select{
+    //         margin-right: 64px;
+    //         border: none !important;
+    //         background: none !important;
+    //         outline: none !important;
+    //     }
 
 
-        .cards {
-            width: 100%;
-            position: relative;
-            padding: 20px 0 ;
-            display: flex;
-            align-items: flex-start;
-            .card-1 {
-                width: 350px;
-                height: 140px;
-                padding: 15px 30px;
-                border: 1px solid rgba($color: #000000, $alpha: 1.0);
-                margin-right: 20px;
-                border-radius: 50px;
-                span {
-                    font-size: 14px;
-                }
-                h3 {
-                    font-size: 30px;
-                    color: #cf7500;
-                }
-                p {
-                    font-size: 12px;
-                }
-            }
+    //     .cards {
+    //         width: 100%;
+    //         position: relative;
+    //         padding: 20px 0 ;
+    //         display: flex;
+    //         align-items: flex-start;
+    //         .card-1 {
+    //             width: 350px;
+    //             height: 140px;
+    //             padding: 15px 30px;
+    //             border: 1px solid rgba($color: #000000, $alpha: 1.0);
+    //             margin-right: 20px;
+    //             border-radius: 50px;
+    //             span {
+    //                 font-size: 14px;
+    //             }
+    //             h3 {
+    //                 font-size: 30px;
+    //                 color: #cf7500;
+    //             }
+    //             p {
+    //                 font-size: 12px;
+    //             }
+    //         }
             
-            .card-date {
-                padding: 15px 30px;
-                border-radius: 50px;
-                border: 1px solid rgba($color: #000000, $alpha: 1.0);
-                width: 300px;
-                height: 140px;
-                margin-right: 20px;
+    //         .card-date {
+    //             padding: 15px 30px;
+    //             border-radius: 50px;
+    //             border: 1px solid rgba($color: #000000, $alpha: 1.0);
+    //             width: 300px;
+    //             height: 140px;
+    //             margin-right: 20px;
                 
-                span {
-                    font-size: 14px;
-                    display:block;
-                    margin-bottom: 20px;
-                    transform: translateX(10px);
+    //             span {
+    //                 font-size: 14px;
+    //                 display:block;
+    //                 margin-bottom: 20px;
+    //                 transform: translateX(10px);
 
-                }
+    //             }
 
-                .datepick {
-                    // border: 1px solid rgba($color: #000000, $alpha: 1.0);
-                    border: none;
-                    border-radius: 20px;
-                    background: rgba($color: #000000, $alpha: .4);
-                    font-size: 12px;
-                    width: 150px;
-                    height: 40px;
-                    padding: 10px;
-                }
+    //             .datepick {
+    //                 // border: 1px solid rgba($color: #000000, $alpha: 1.0);
+    //                 border: none;
+    //                 border-radius: 20px;
+    //                 background: rgba($color: #000000, $alpha: .4);
+    //                 font-size: 12px;
+    //                 width: 150px;
+    //                 height: 40px;
+    //                 padding: 10px;
+    //             }
 
-                img {
-                    transform: translate(10px , 10px);
-                }
-            }
-        }
+    //             img {
+    //                 transform: translate(10px , 10px);
+    //             }
+    //         }
+    //     } //
 
-    }
+    // }
 
 
     .searchFlights {
