--- a/src/scss/hotel.scss
+++ b/src/scss/hotel.scss
@@ -41,7 +41,7 @@
             width: 350px;
             height: 140px;
             display: flex;
-            justify-content: start;
+            justify-content: flex-start;
             align-items: center;
             border: 1px solid rgba($color: #000000, $alpha: 1.0);
             margin-right: 20px;
@@ -59,6 +59,8 @@
                     margin-right: 20px;
                     
                 }
+
+                
             }
         }
 
